Add a manage button in the thumbnail view in order to save an edited pdf (bug 2010830)

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -187,7 +187,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                       </button>
                     </div>
                     <div id="viewsManagerStatus">
-                      <div id="viewsManagerStatusAction" class="hidden">
+                      <div id="viewsManagerStatusAction">
                         <span
                           id="viewsManagerStatusActionLabel"
                           class="viewsManagerStatusLabel"
@@ -207,22 +207,22 @@ See https://github.com/adobe-type-tools/cmap-resources
                           </button>
                           <menu id="viewsManagerStatusActionOptions" class="popupMenu">
                             <li>
-                              <button id="viewsManagerStatusActionCopy" class="noIcon" role="menuitem" type="button" tabindex="0">
+                              <button id="viewsManagerStatusActionCopy" class="noIcon" role="menuitem" type="button" tabindex="0" disabled>
                                 <span data-l10n-id="pdfjs-views-manager-pages-status-copy-button-label"></span>
                               </button>
                             </li>
                             <li>
-                              <button id="viewsManagerStatusActionCut" class="noIcon" role="menuitem" type="button" tabindex="0">
+                              <button id="viewsManagerStatusActionCut" class="noIcon" role="menuitem" type="button" tabindex="0" disabled>
                                 <span data-l10n-id="pdfjs-views-manager-pages-status-cut-button-label"></span>
                               </button>
                             </li>
                             <li>
-                              <button id="viewsManagerStatusActionDelete" class="noIcon" role="menuitem" type="button" tabindex="0">
+                              <button id="viewsManagerStatusActionDelete" class="noIcon" role="menuitem" type="button" tabindex="0" disabled>
                                 <span data-l10n-id="pdfjs-views-manager-pages-status-delete-button-label"></span>
                               </button>
                             </li>
                             <li>
-                              <button id="viewsManagerStatusActionSaveAs" class="noIcon" role="menuitem" type="button" tabindex="0">
+                              <button id="viewsManagerStatusActionSaveAs" class="noIcon" role="menuitem" type="button" tabindex="0" disabled>
                                 <span data-l10n-id="pdfjs-views-manager-pages-status-save-as-button-label"></span>
                               </button>
                             </li>
