Fix the sidebar resizer accessibility
It's width was a bit wrong because of its box-sizing property and it was causing some issues when resizing it with the keyboard.
And for the thumbnails sidebar, the tabindex was missing and some aria properties too.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -278,7 +278,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                     <div id="attachmentsView" class="hidden"></div>
                     <div id="layersView" class="treeView hidden"></div>
                   </div>
-                  <div id="viewsManagerResizer" class="sidebarResizer"></div>
+                  <div id="viewsManagerResizer" class="sidebarResizer" role="separator" aria-controls="viewsManager" tabindex="0"></div>
                 </div>
                 <!-- sidebarContainer -->
 
